--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "async": "^1.1.0",
     "bcryptjs": "^2.1.0",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
@@ -24,6 +25,7 @@
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
     "rc": "~0.5.0",
+    "request": "^2.57.0",
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0",
     "validator": "^3.40.0"
